--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Головна</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -60,8 +60,8 @@
     </header>
     <!--герой-->
     <main>
-      <section class="primary-hero">
-        <div class="container">
+      <section class="primary-hero container">
+        <!-- <div class="container"> -->
           <h1 class="hero">Ефективні рішення для<br />вашого бізнесу</h1>
 
           <button data-modal-open type="button" class="hero-button">
@@ -139,16 +139,17 @@
               </form>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
       <!--main-->
-      <section>
-        <div class="container">
+      <section class="container adv">
+        <!-- class="container" -->
+        <!-- <div class="container"> -->
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantage">
             <li class="advantage__item">
-              <div class="thumb">
-                <div class="thumb__advantage">
+              <!-- <div class="thumb"> -->
+                <div class="thumb__advantage"> 
                   <svg class="thumb__picture" width="70px" height="70px">
                     <use href="./images/icons.svg#icon-antena1"></use>
                   </svg>
@@ -158,10 +159,10 @@
                   Ідейні міркування, і навіть початок повсякденної роботи з
                   формування позиції.
                 </p>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="advantage__item">
-              <div class="thumb">
+              <!-- <div class="thumb"> -->
                 <div class="thumb__advantage">
                   <svg class="thumb__picture" width="70px" height="54px">
                     <use href="./images/icons.svg#icon-watch2"></use>
@@ -172,11 +173,11 @@
                   Завдання організації, особливо рамки і місце навчання кадрів
                   тягне у себе.
                 </p>
-              </div>
+              <!-- </div> -->
             </li>
 
             <li class="advantage__item">
-              <div class="thumb">
+              <!-- <div class="thumb"> -->
                 <div class="thumb__advantage">
                   <svg class="thumb__picture" width="67px" height="70px">
                     <use href="./images/icons.svg#icon-monitor3"></use>
@@ -187,11 +188,11 @@
                   Так само консультація з широким активом значною мірою
                   зумовлює.
                 </p>
-              </div>
+              <!-- </div> -->
             </li>
 
             <li class="advantage__item">
-              <div class="thumb">
+              <!-- <div class="thumb"> -->
                 <div class="thumb__advantage">
                   <svg class="thumb__picture" width="70px" height="70px">
                     <use href="./images/icons.svg#icon-astronaut4"></use>
@@ -203,15 +204,15 @@
                   Значимість цих проблем настільки очевидна, що реалізація
                   планових завдань.
                 </p>
-              </div>
+              <!-- </div> -->
             </li>
           </ul>
-        </div>
+        <!-- </div> -->
       </section>
 
       <!--specialization-->
-      <section class="main-headline">
-        <div class="container">
+      <section class="main-headline container">
+        <!-- <div class="container"> -->
           <h2 class="headline">Чим ми займаємося</h2>
           <ul class="images-work">
             <li class="images-work__item">
@@ -228,16 +229,16 @@
             </li>
             <li class="images-work__item">
               <img src="images/planshet3.jpg" alt="планшет" width="370" />
-              <div class="images-work__text">
+              <div class="images-work__text">  
                 <p class="images-work__name">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
               </div>
             </li>
           </ul>
-        </div>
+        <!-- </div> -->
       </section>
       <!--people-->
-      <section class="t-person">
-        <div class="container">
+      <section class="t-person container">
+        <!-- <div class="container"> -->
           <h2 class="headline">Наша команда</h2>
 
           <ul class="team">
@@ -400,7 +401,7 @@
               </ul>
             </li>
           </ul>
-        </div>
+        <!-- </div> -->
       </section>
 
       <section>
@@ -457,8 +458,8 @@
       </section>
     </main>
     <!--footer-->
-    <footer class="footer">
-      <div class="container foot-address">
+    <footer class="footer foot-address">
+      <!-- <div class="container foot-address"> -->
         <div class="cont-footer">
           <a href="index.html" class="main-nav__logo">
             Web<span class="main-nav__text main-nav__text--inverse">Studio</span>
@@ -544,7 +545,7 @@
             </div>
           </div>
         </form>
-      </div>
+      <!-- </div> -->
     </footer>
     <script src="./js/modal.js"></script>
   </body>
