--- a/index.html
+++ b/index.html
@@ -254,8 +254,12 @@
         <!-- </div> -->
       </section>
       <!--people-->
-      <section class="t-person container">
-        <!-- <div class="container"> -->
+
+      <section class="container t-persons">
+        <div class="t-person">
+
+
+      
         <h2 class="headline">Наша команда</h2>
 
         <ul class="team">
@@ -413,7 +417,7 @@
             </ul>
           </li>
         </ul>
-        <!-- </div> -->
+        </div>
       </section>
 
       <section class="container">
@@ -470,16 +474,17 @@
     </main>
     <!--footer-->
     <footer class="container footer foot-address">
-      <!-- <div class="container foot-address"> -->
+      <!-- <div class="foot-address"> -->
 
       <div class="cont-footer">
+        <!-- лого -->
         <div>
           <a href="index.html" class="main-nav__logo">
             Web<span class="main-nav__text main-nav__text--inverse"
               >Studio</span
             >
           </a>
-
+        <!-- адрес  -->
           <div>
             <address class="address">
               <!-- class="info-address" -->
@@ -501,6 +506,8 @@
             </address>
           </div>
         </div>
+
+
 
         <!-- соцмережі -->
         <div class="foot-network">
