--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
                   </div>
                   <div class="card__name">
                     <h2 class="card__project">
-                      Постер New Orlean vs Golden Star
+                      Постер <span lang="en">New Orlean vs Golden Star</span>
                     </h2>
                     <p class="card__example">Дизайн</p>
                   </div>
