--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <a href="index.html" class="main-nav__logo">
           Web<span class="main-nav__text">Studio</span>
         </a>
+
+
+
+        <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="modile-menu" >
+          <svg width="40px" height="40px" >
+            <use href="./images/icons.svg#icon-menu-phone"></use>
+          </svg>
+        </button>
+       
+
+
+
         <ul class="site-nav">
           <li class="site-nav__item">
             <a href="index.html" class="site-nav__link site-nav__link--active"
@@ -64,55 +76,7 @@
 
 
 
-      <!-- ----------------------------------- -->
-      <div class="container header__container">
-        <a class="logo" href="./index.html" lang="en">
-          <span class="logo--accent">Web</span>
-          Studio
-        </a>
-        <div class="main-menu__container">
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link nav__link--current" href="./index.html">Студія</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="./portfolio.html">Портфоліо</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="contacts">
-            <li class="contacts__item">
-              <a class="contacts__link" href="mailto:info@devstudio.com" lang="en">
-                <svg class="contacts__icon" width="16" height="12">
-                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="contacts__item">
-              <a class="contacts__link" href="tel:+380961111111">
-                <svg class="contacts__icon" width="10" height="16">
-                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-          <svg class="menu__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-menu"></use>
-          </svg>
-        </button>
-      </div>
-
-<!-- ------------------------------------------------ -->
-
+    
 
 
 
@@ -633,13 +597,30 @@
       </form>
       <!-- </div> -->
     </footer>
+<!-- мобільне меню -->
+<div class="menu-container js-menu-container" id="modile-menu">
+  
+    <button type="button" class="menu-toggle js-menu-container">
+      <svg>
+        <use href="./images/icons.svg#icon-close-phone"></use>
+      </svg>
+    </button>
+  <ul>
+    <li>fg</li>
+    <li>bbcshdbvhafs</li>
+  </ul>
+
+</div> 
+
+
+
     <script
     defer
     src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
     integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
     crossorigin="anonymous"
   ></script>
-  <script defer src="js/mobile-menu.js"></script>
+  <script defer src="./js/mobile-menu.js"></script>
 
 
 <!-- 
