--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
+
   <body>
-    <!--headline-->
     <header class="nav">
       <div class="main-nav">
-        <!-- container -->
-        <!-- <nav> -->
         <a href="index.html" class="main-nav__logo main-nav__logo--upper">
           Web<span class="main-nav__text">Studio</span>
         </a>
-        <!-- кнопка мобільного меню -->
-
         <button
           type="button"
           class="menu-toggle js-open-menu"
@@ -64,7 +60,7 @@
                 class="mobile-site-nav-contact__item mobile-site-nav-contact__item--tel"
               >
                 <a
-                  href="tel:+1 212-772-4150"
+                  href="tel:+12127724150"
                   class="mobile-site-nav-contact__link mobile-site-nav-contact__link--tel"
                   >+1 212-772-4150</a
                 >
@@ -95,7 +91,6 @@
             </ul>
           </div>
         </div>
-
         <div class="nav-menu-container">
           <ul class="site-nav">
             <li class="site-nav__item">
@@ -202,7 +197,7 @@
               <label for="coment" class="modal-contact__label coment-label"
                 >Коментар</label
               >
-              <!-- <div class="modal-contact__group"> -->
+
               <textarea
                 placeholder="Введіть текст"
                 name="coment"
@@ -210,7 +205,6 @@
                 cols="40"
                 rows="8"
               ></textarea>
-              <!-- </div> -->
 
               <div class="form-group-agrees">
                 <label class="form-group-agrees__checkbox">
@@ -234,16 +228,12 @@
             </form>
           </div>
         </div>
-        <!-- </div> -->
       </section>
-      <!--main-->
+
       <section class="container adv">
-        <!-- class="container" -->
-        <!-- <div class="container"> -->
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="advantage">
           <li class="advantage__item">
-            <!-- <div class="thumb"> -->
             <div class="thumb__advantage">
               <svg class="thumb__picture" width="70px" height="70px">
                 <use href="./images/icons.svg#icon-antena1"></use>
@@ -254,10 +244,8 @@
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
-            <!-- </div> -->
           </li>
           <li class="advantage__item">
-            <!-- <div class="thumb"> -->
             <div class="thumb__advantage">
               <svg class="thumb__picture" width="70px" height="54px">
                 <use href="./images/icons.svg#icon-watch2"></use>
@@ -268,11 +256,9 @@
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
-            <!-- </div> -->
           </li>
 
           <li class="advantage__item">
-            <!-- <div class="thumb"> -->
             <div class="thumb__advantage">
               <svg class="thumb__picture" width="67px" height="70px">
                 <use href="./images/icons.svg#icon-monitor3"></use>
@@ -282,11 +268,9 @@
             <p class="thumb__paragraph">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
-            <!-- </div> -->
           </li>
 
           <li class="advantage__item">
-            <!-- <div class="thumb"> -->
             <div class="thumb__advantage">
               <svg class="thumb__picture" width="70px" height="70px">
                 <use href="./images/icons.svg#icon-astronaut4"></use>
@@ -298,15 +282,12 @@
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
-            <!-- </div> -->
           </li>
         </ul>
-        <!-- </div> -->
       </section>
 
       <!--specialization-->
       <section class="main-headline container">
-        <!-- <div class="container"> -->
         <h2 class="headline">Чим ми займаємося</h2>
         <ul class="images-work">
           <li class="images-work__item">
@@ -323,10 +304,6 @@
             <div class="images-work__text">
               <p class="images-work__name">ДЕСКТОПНІ ДОДАТКИ</p>
             </div>
-            <!-- <img src="images/komp1.jpg" alt="комп'ютер" width="370" />
-            <div class="images-work__text">
-              <p class="images-work__name">ДЕСКТОПНІ ДОДАТКИ</p>
-            </div> -->
           </li>
           <li class="images-work__item">
             <img
@@ -363,7 +340,6 @@
             </div>
           </li>
         </ul>
-        <!-- </div> -->
       </section>
       <!--people-->
 
@@ -373,29 +349,25 @@
 
           <ul class="team">
             <li class="team__person">
-              <!-- <img src="images/demyanenko4.jpg" alt="Ігор Дем'яненко" /> -->
+              <img
+                srcset="
+                  ./images/team/demyanenko1/demyanenko1_270.jpg 270w,
+                  ./images/team/demyanenko1/demyanenko1_354.jpg 354w,
+                  ./images/team/demyanenko1/demyanenko1_450.jpg 450w,
+                  ./images/team/demyanenko1/demyanenko1_540.jpg 540w,
+                  ./images/team/demyanenko1/demyanenko1_708.jpg 708w,
+                  ./images/team/demyanenko1/demyanenko1_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/demyanenko1/demyanenko1_450.jpg"
+                alt="Ігор Дем'яненко"
+                width="450"
+                height="460"
+                loading="lazy"
+              />
 
-
-
-
-              <img srcset="
-              ./images/team/demyanenko1/demyanenko1_270.jpg 270w,
-              ./images/team/demyanenko1/demyanenko1_354.jpg 354w,
-              ./images/team/demyanenko1/demyanenko1_450.jpg 450w,
-              ./images/team/demyanenko1/demyanenko1_540.jpg 540w,
-              ./images/team/demyanenko1/demyanenko1_708.jpg 708w,
-              ./images/team/demyanenko1/demyanenko1_900.jpg 900w
-            " sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-          src="./images/team/demyanenko1/demyanenko1_450.jpg" alt="Ігор Дем'яненко" width="450" height="460"
-          loading="lazy" />
-
-
-
-              <!-- width="270"  -->
-
-              <!-- person-name -->
               <h3 class="team__name">Ігор Дем'яненко</h3>
-              <!--position  -->
+
               <p class="team__position">Product Designer</p>
 
               <ul class="network">
@@ -431,24 +403,23 @@
               </ul>
             </li>
             <li class="team__person">
-              <!-- repina2 -->
-              
-              <img srcset="
-              ./images/team/repina2/repina2_270.jpg 270w,
-              ./images/team/repina2/repina2_354.jpg 354w,
-              ./images/team/repina2/repina2_450.jpg 450w,
-              ./images/team/repina2/repina2_540.jpg 540w,
-              ./images/team/repina2/repina2_708.jpg 708w,
-              ./images/team/repina2/repina2_900.jpg 900w
-            " sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-          src="./images/team/repina2/repina2_450.jpg" alt="Ольга Рєпіна" width="450" height="460"
-          loading="lazy" />
+              <img
+                srcset="
+                  ./images/team/repina3/repina3_270.jpg 270w,
+                  ./images/team/repina3/repina3_354.jpg 354w,
+                  ./images/team/repina3/repina3_450.jpg 450w,
+                  ./images/team/repina3/repina3_540.jpg 540w,
+                  ./images/team/repina3/repina3_708.jpg 708w,
+                  ./images/team/repina3/repina3_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/repina3/repina32450.jpg"
+                alt="Ольга Рєпіна"
+                width="450"
+                height="460"
+                loading="lazy"
+              />
 
-
-
-
-
-              <!-- <img src="images/repina1.jpg" alt="Ольга Рєпіна" /> -->
               <h3 class="team__name">Ольга Рєпіна</h3>
               <p class="team__position">Frontend Developer</p>
 
@@ -486,21 +457,22 @@
             </li>
 
             <li class="team__person">
-              <!-- <img src="images/tarasov2.jpg" alt="Микола Тарасов" /> -->
-
-
-
-
-              <img srcset="
-              ./images/team/tarasov3/tarasov3_270.jpg 270w,
-              ./images/team/tarasov3/tarasov3_354.jpg 354w,
-              ./images/team/tarasov3/tarasov3_450.jpg 450w,
-              ./images/team/tarasov3/tarasov3_540.jpg 540w,
-              ./images/team/tarasov3/tarasov3_708.jpg 708w,
-              ./images/team/tarasov3/tarasov3_900.jpg 900w
-            " sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-          src="./images/team/tarasov3/tarasov3_450.jpg" alt="Микола Тарасов" width="450" height="460"
-          loading="lazy" />
+              <img
+                srcset="
+                  ./images/team/tarasov2/tarasov2_270.jpg 270w,
+                  ./images/team/tarasov2/tarasov2_354.jpg 354w,
+                  ./images/team/tarasov2/tarasov2_450.jpg 450w,
+                  ./images/team/tarasov2/tarasov2_540.jpg 540w,
+                  ./images/team/tarasov2/tarasov2_708.jpg 708w,
+                  ./images/team/tarasov2/tarasov2_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/tarasov2/tarasov2_450.jpg"
+                alt="Микола Тарасов"
+                width="450"
+                height="460"
+                loading="lazy"
+              />
 
               <h3 class="team__name">Микола Тарасов</h3>
               <p class="team__position">Marketing</p>
@@ -540,19 +512,22 @@
             <li class="team__person">
               <!-- <img src="images/yermakov3.jpg" alt="Михайло Єрмаков" /> -->
 
-
-
-              <img srcset="
-              ./images/team/yermakov4/yermakov4_270.jpg 270w,
-              ./images/team/yermakov4/yermakov4_354.jpg 354w,
-              ./images/team/yermakov4/yermakov4_450.jpg 450w,
-              ./images/team/yermakov4/yermakov4_540.jpg 540w,
-              ./images/team/yermakov4/yermakov4_708.jpg 708w,
-              ./images/team/yermakov4/yermakov4_900.jpg 900w
-            " sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-          src="./images/team/yermakov4/yermakov4_450.jpg" alt="Михайло Єрмаков" width="450" height="460"
-          loading="lazy" />
-
+              <img
+                srcset="
+                  ./images/team/yermakov4/yermakov4_270.jpg 270w,
+                  ./images/team/yermakov4/yermakov4_354.jpg 354w,
+                  ./images/team/yermakov4/yermakov4_450.jpg 450w,
+                  ./images/team/yermakov4/yermakov4_540.jpg 540w,
+                  ./images/team/yermakov4/yermakov4_708.jpg 708w,
+                  ./images/team/yermakov4/yermakov4_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/yermakov4/yermakov4_450.jpg"
+                alt="Михайло Єрмаков"
+                width="450"
+                height="460"
+                loading="lazy"
+              />
 
               <h3 class="team__name">Михайло Єрмаков</h3>
               <p class="team__position">UI Designer</p>
@@ -644,20 +619,18 @@
         </div>
       </section>
     </main>
-    <!--footer-->
-    <footer class="container footer foot-address">
-      <div class="foot-address">
-        <!-- <div class="foot-address"> -->
 
+    <!--footer-->
+    <footer class="footer foot-address">
+      <div class="foot-address">
         <div class="cont-footer">
-          <!-- лого -->
-          <div>
+          <div class="cont-footer__blok">
             <a href="index.html" class="main-nav__logo">
               Web<span class="main-nav__text main-nav__text--inverse"
                 >Studio</span
               >
             </a>
-            <!-- адрес  -->
+
             <div>
               <address class="address">
                 <!-- class="info-address" -->
@@ -721,19 +694,20 @@
 
         <form class="mail-sign">
           <div class="footer-sign">
-            <p class="label-sign-footer">Підпишіться на розсилку</p>
+            <div class="">
+              <p class="label-sign-footer">Підпишіться на розсилку</p>
 
-            <div class="footer-sign-sign">
-              <label>
-                <input
-                  class="input-sign"
-                  type="email"
-                  name="sign"
-                  placeholder="E-mail"
-                />
-              </label>
+              <div class="footer-sign-sign">
+                <label>
+                  <input
+                    class="input-sign"
+                    type="email"
+                    name="sign"
+                    placeholder="E-mail"
+                  />
+                </label>
+              </div>
             </div>
-
             <button type="submit" class="button-sign">
               Підписатися
               <svg class="button-sign__icon" width="24px" height="24px">
@@ -744,7 +718,7 @@
         </form>
       </div>
     </footer>
-
+    3
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
