--- a/portfolio.html
+++ b/portfolio.html
@@ -17,49 +17,125 @@
   </head>
   <body>
     <!--headline-->
-    <header>
-      <div class="container main-nav">
+    <header class="nav">
+      <div class="main-nav">
         <!-- container -->
         <!-- <nav> -->
-        <a href="index.html" class="main-nav__logo">
+        <a href="index.html" class="main-nav__logo main-nav__logo--upper">
           Web<span class="main-nav__text">Studio</span>
         </a>
-        <ul class="site-nav">
-          <li class="site-nav__item">
-            <a href="index.html" class="site-nav__link">Студія</a>
-          </li>
-          <li class="site-nav__item">
-            <a
-              href="portfolio.html"
-              class="site-nav__link site-nav__link--active"
-              >Портфоліо</a
-            >
-          </li>
-          <li class="site-nav__item">
-            <a href="" class="site-nav__link">Контакти</a>
-          </li>
-        </ul>
-        <!-- </nav> -->
-        <ul class="site-nav-contact">
-          <li class="site-nav-contact__item">
-            <a href="mailto:info@devstudio.com" class="site-nav-contact__link">
-              <svg class="site-nav-contact__icon" width="16px" height="12px">
-                <use href="./images/icons.svg#icon-envelope-1"></use>
-              </svg>
+        <!-- кнопка мобільного меню -->
 
-              info@devstudio.com</a
-            >
-          </li>
+        <button
+          type="button"
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="modile-menu"
+        >
+          <svg width="40px" height="40px">
+            <use href="./images/icons.svg#icon-menu-phone"></use>
+          </svg>
+        </button>
+        <!-- мобільне меню -->
+        <div class="menu-container js-menu-container" id="modile-menu">
+          <button type="button" class="menu-toggle js-close-menu">
+            <svg class="menu-icon" width="40px" height="40px">
+              <use href="./images/icons.svg#icon-close-phone"></use>
+            </svg>
+          </button>
+          <div>
+            <ul class="mobile-site-nav">
+              <li class="mobile-site-nav__item">
+                <a href="index.html" class="mobile-site-nav__link">Студія</a>
+              </li>
+              <li class="mobile-site-nav__item">
+                <a href="portfolio.html" class="mobile-site-nav__link"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mobile-site-nav__item">
+                <a href="" class="mobile-site-nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="mobile-site-nav-contact">
+              <li
+                class="mobile-site-nav-contact__item mobile-site-nav-contact__item--tel"
+              >
+                <a
+                  href="tel:+12127724150"
+                  class="mobile-site-nav-contact__link mobile-site-nav-contact__link--tel"
+                  >+1 212-772-4150</a
+                >
+              </li>
 
-          <li class="site-nav-contact__item">
-            <a href="tel:+380961111111" class="site-nav-contact__link">
-              <svg class="site-nav-contact__icon" width="10px" height="16px">
-                <use href="./images/icons.svg#icon-mob2"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+              <li class="mobile-site-nav-contact__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mobile-site-nav-contact__link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+
+            <ul class="mobile-nav-network">
+              <li class="mobile-nav-network__item">
+                <a href="" class="mobile-nav-network__link">Instagram</a>
+              </li>
+              <li class="mobile-nav-network__item">
+                <a href="" class="mobile-nav-network__link">Twitter</a>
+              </li>
+              <li class="mobile-nav-network__item">
+                <a href="" class="mobile-nav-network__link">Facebook</a>
+              </li>
+              <li class="mobile-nav-network__item">
+                <a href="" class="mobile-nav-network__link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="nav-menu-container">
+          <ul class="site-nav">
+            <li class="site-nav__item">
+              <a href="index.html" class="site-nav__link">Студія</a>
+            </li>
+            <li class="site-nav__item">
+              <a
+                href="portfolio.html"
+                class="site-nav__link site-nav__link--active"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="site-nav__item">
+              <a href="" class="site-nav__link">Контакти</a>
+            </li>
+          </ul>
+          <!-- </nav> -->
+          <ul class="site-nav-contact">
+            <li class="site-nav-contact__item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="site-nav-contact__link"
+              >
+                <svg class="site-nav-contact__icon" width="16px" height="12px">
+                  <use href="./images/icons.svg#icon-envelope-1"></use>
+                </svg>
+
+                info@devstudio.com</a
+              >
+            </li>
+
+            <li class="site-nav-contact__item site-nav-contact__item--lower">
+              <a href="tel:+380961111111" class="site-nav-contact__link">
+                <svg class="site-nav-contact__icon" width="10px" height="16px">
+                  <use href="./images/icons.svg#icon-mob2"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main class="portfolio-main">
@@ -98,9 +174,9 @@
           <h1 class="visually-hidden">Приклади робіт</h1>
 
           <ul class="work">
-                        <li class="work__item">
+            <li class="work__item">
               <a href="" class="card">
-                                <div class="card__img">
+                <div class="card__img">
                   <img
                     srcset="
                       ./images/portfolio/portfolio-1/portfolio-1_354.jpg 354w,
@@ -172,7 +248,7 @@
             <li class="work__item">
               <a href="" class="card">
                 <div class="card__img">
-                                    <img
+                  <img
                     srcset="
                       ./images/portfolio/portfolio-3/portfolio-3_354.jpg 354w,
                       ./images/portfolio/portfolio-3/portfolio-3_370.jpg 370w,
@@ -413,96 +489,114 @@
     </main>
 
     <!--footer-->
-    <footer class="footer">
-      <div class="container foot-address">
+    <footer class="footer foot-address">
+      <!-- container  -->
+
+      <div class="foot-address">
+        <!-- <div class="foot-address"> -->
+
         <div class="cont-footer">
-          <a href="index.html" class="main-nav__logo">
-            Web<span class="main-nav__text main-nav__text--inverse"
-              >Studio</span
-            >
-          </a>
-
-          <div>
-            <address class="address">
-              <!-- class="info-address" -->
-              <ul>
-                <li>
-                  <p class="address__footer">м. Київ, пр-т Лесі Українки, 26</p>
-                </li>
-                <li>
-                  <a href="mailto:info@devstudio.com" class="address__email">
-                    info@devstudio.com
-                  </a>
-                </li>
-                <li>
-                  <a href="tel:+380961111111" class="address__tel"
-                    >+38 096 111 11 11
-                  </a>
-                </li>
-              </ul>
-            </address>
+          <!-- лого -->
+          <div class="cont-footer__blok">
+            <a href="index.html" class="main-nav__logo">
+              Web<span class="main-nav__text main-nav__text--inverse"
+                >Studio</span
+              >
+            </a>
+            <!-- адрес  -->
+            <div>
+              <address class="address">
+                <!-- class="info-address" -->
+                <ul>
+                  <li>
+                    <p class="address__footer">
+                      м. Київ, пр-т Лесі Українки, 26
+                    </p>
+                  </li>
+                  <li>
+                    <a href="mailto:info@devstudio.com" class="address__email">
+                      info@devstudio.com
+                    </a>
+                  </li>
+                  <li>
+                    <a href="tel:+380961111111" class="address__tel"
+                      >+38 096 111 11 11
+                    </a>
+                  </li>
+                </ul>
+              </address>
+            </div>
           </div>
-        </div>
 
-        <div class="foot-network">
-          <p class="join">ПРИЄДНУЙТЕСЬ</p>
+          <!-- соцмережі -->
+          <div class="foot-network">
+            <p class="join">ПРИЄДНУЙТЕСЬ</p>
 
-          <ul class="footer-network">
-            <li class="footer-network__item">
-              <a href="" class="footer-network__logo">
-                <svg class="footer-network__img" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-network__item">
-              <a href="" class="footer-network__logo">
-                <svg class="footer-network__img" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-twitter2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-network__item">
-              <a href="" class="footer-network__logo">
-                <svg class="footer-network__img" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-facebook3"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-network__item">
-              <a href="" class="footer-network__logo">
-                <svg class="footer-network__img" width="20px" height="20px">
-                  <use href="./images/icons.svg#icon-linkedin4"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+            <ul class="footer-network">
+              <li class="footer-network__item">
+                <a href="" class="footer-network__logo">
+                  <svg class="footer-network__img" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-network__item">
+                <a href="" class="footer-network__logo">
+                  <svg class="footer-network__img" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-twitter2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-network__item">
+                <a href="" class="footer-network__logo">
+                  <svg class="footer-network__img" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook3"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-network__item">
+                <a href="" class="footer-network__logo">
+                  <svg class="footer-network__img" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin4"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <form class="mail-sign">
           <div class="footer-sign">
-            <p class="label-sign-footer">Підпишіться на розсилку</p>
+            <div class="">
+              <p class="label-sign-footer">Підпишіться на розсилку</p>
 
-            <div class="footer-sign-sign">
-              <label>
-                <input
-                  class="input-sign"
-                  type="email"
-                  name="sign"
-                  placeholder="E-mail"
-                />
-              </label>
-
-              <button type="submit" class="button-sign">
-                Підписатися
-                <svg class="button-sign__icon" width="24px" height="24px">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
+              <div class="footer-sign-sign">
+                <label>
+                  <input
+                    class="input-sign"
+                    type="email"
+                    name="sign"
+                    placeholder="E-mail"
+                  />
+                </label>
+              </div>
             </div>
+            <button type="submit" class="button-sign">
+              Підписатися
+              <svg class="button-sign__icon" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </div>
         </form>
       </div>
     </footer>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
