--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header class="nav">
+    <header>
       <div class="main-nav">
         <a href="index.html" class="main-nav__logo main-nav__logo--upper">
           Web<span class="main-nav__text">Studio</span>
@@ -42,7 +42,7 @@
           <div>
             <ul class="mobile-site-nav">
               <li class="mobile-site-nav__item">
-                <a href="index.html" class="mobile-site-nav__link">Студія</a>
+                <a href="index.html" class="mobile-site-nav__link site-nav__link--active">Студія</a>
               </li>
               <li class="mobile-site-nav__item">
                 <a href="portfolio.html" class="mobile-site-nav__link"
