--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!--headline-->
-    <header class="nav">
+    <header>
       <div class="main-nav">
         <!-- container -->
         <!-- <nav> -->
@@ -49,7 +49,7 @@
                 <a href="index.html" class="mobile-site-nav__link">Студія</a>
               </li>
               <li class="mobile-site-nav__item">
-                <a href="portfolio.html" class="mobile-site-nav__link"
+                <a href="portfolio.html" class="mobile-site-nav__link site-nav__link--active"
                   >Портфоліо</a
                 >
               </li>
